--- a/src/widget/form/switch/SwitchWidget.html
+++ b/src/widget/form/switch/SwitchWidget.html
@@ -1,7 +1,4 @@
-<div  ms-visible="show">
-<div ms-visible="status!='readonly'">
-<input type="checkbox" ms-attr-id="vid" ms-attr-checked="checked" class="e-switch"/>
+<div ms-if="status!='readonly'">
+<input type="checkbox" ms-attr-id="$vid" ms-attr-checked="checked" class="e-switch"/>
 </div>
-<input ms-if="status=='readonly'" class="form-control form-widget-to-focus-class form-text"
-       ms-attr-value="display"  readonly/>
-</div>
+<input ms-if="status=='readonly'" class="form-control form-text" ms-duplex="display" readonly />
