--- a/src/widget/form/switch/switch.demo.html
+++ b/src/widget/form/switch/switch.demo.html
@@ -4,18 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title></title>
-    <link href="/page/lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-    <link href="/page/lib/bootstrap/font-awesome/css/font-awesome.css" rel="stylesheet">
-    <link href="/page/lib/bootstrap/css/animate.css" rel="stylesheet">
-    <link href="/page/lib/bootstrap/css/style.css" rel="stylesheet">
-    <link href="/page/src/css/page.css" rel="stylesheet">
-    <link href="/page/thirdpart/products-WB0R5L90S/Static_Full_Version/css/plugins/switchery/switchery.css" rel="stylesheet">
+    <link href="/Page2/lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/Page2/lib/bootstrap/font-awesome/css/font-awesome.css" rel="stylesheet">
+    <link href="/Page2/lib/bootstrap/css/animate.css" rel="stylesheet">
+    <link href="/Page2/lib/bootstrap/css/style.css" rel="stylesheet">
+    <link href="/Page2/src/css/page.css" rel="stylesheet">
+    <link href="/Page2/thirdpart/products-WB0R5L90S/Static_Full_Version/css/plugins/switchery/switchery.css" rel="stylesheet">
 
-    <!-- Switchery -->
-    <script src="/page/thirdpart/products-WB0R5L90S/Static_Full_Version/js/plugins/switchery/switchery.js"></script>
-
-   <!-- <link href="../../../../lib/kendoui/styles/kendo.common.min.css" rel="stylesheet">
-    <link href="../../../../lib/kendoui/styles/kendo.default.min.css" rel="stylesheet">-->
 </head>
 <body>
 <br>
@@ -33,39 +28,37 @@
         </div>
     </div>
 </div>
-<script src="/page/bower_components/mootools/Source/Core/Core.js"></script>
-<script src="/page/bower_components/mootools/Source/Types/Array.js"></script>
-<script src="/page/bower_components/mootools/Source/Types/String.js"></script>
-<script src="/page/bower_components/mootools/Source/Types/Object.js"></script>
-<script src="/page/bower_components/mootools/Source/Types/Number.js"></script>
-<script src="/page/bower_components/mootools/Source/Types/Function.js"></script>
-<script src="/page/bower_components/mootools/Source/Class/Class.js"></script>
-<script src="/page/bower_components/mootools/Source/Class/Class.Extras.js"></script>
-<script src="/page/thirdpart/products-WB0R5L90S/Static_Full_Version/js/jquery-2.1.1.js"></script>
-<script src="/page/thirdpart/products-WB0R5L90S/Static_Full_Version/js/bootstrap.js"></script>
+<script src="/Page2/bower_components/mootools/Source/Core/Core.js"></script>
+<script src="/Page2/bower_components/mootools/Source/Types/Array.js"></script>
+<script src="/Page2/bower_components/mootools/Source/Types/String.js"></script>
+<script src="/Page2/bower_components/mootools/Source/Types/Object.js"></script>
+<script src="/Page2/bower_components/mootools/Source/Types/Number.js"></script>
+<script src="/Page2/bower_components/mootools/Source/Types/Function.js"></script>
+<script src="/Page2/bower_components/mootools/Source/Class/Class.js"></script>
+<script src="/Page2/bower_components/mootools/Source/Class/Class.Extras.js"></script>
+<script src="/Page2/thirdpart/products-WB0R5L90S/Static_Full_Version/js/jquery-2.1.1.js"></script>
+<script src="/Page2/thirdpart/products-WB0R5L90S/Static_Full_Version/js/bootstrap.js"></script>
 
+<!-- Switchery -->
+<script src="/Page2/thirdpart/products-WB0R5L90S/Static_Full_Version/js/plugins/switchery/switchery.js"></script>
 <script>
     $.noConflict();
 </script>
-<script src="/page/bower_components/avalon/avalon.js"></script>
+<script src="/Page2/bower_components/avalon/avalon.js"></script>
 <script>
     tip1 = null;
     tip2 = null;
     require(["../../src/Bootstrap"], function () {
         switchObj = Page.create("switch", {
             $parentId: 'switchCon',
-            //checked:true,
-            value:false,
-            //show:true,
-            status:"readonly",
-            checkValue:true,// 默认为1,
-            unCheckValue:false// 默认为0
+            $id:"demo",
+            value:true,
+            //status:"disabled",
+            $checkValue:true,// 默认为1,
+            $unCheckValue:false// 默认为0
         });
         switchObj.render();
 
-//        var elem = document.querySelector('.js-switch');
-//        var switchery = new Switchery(elem, { color: '#1AB394' });
-       // $("#switchCon2").kendoMobileSwitch({});
     });
 </script>
 <!--<script src="bower_components/avalon/avalon.js" ></script>-->
