--- a/src/widget/form/checkbox/CheckboxWidget.html
+++ b/src/widget/form/checkbox/CheckboxWidget.html
@@ -1,13 +1,15 @@
-<div ms-if="status!='readonly'" class="form-widget-container" ms-each="items">
-    <label ms-click="itemCheck(vid,el)" style="margin-bottom:0">
-        <div class="icheckbox_square-green" ms-class-checked="el.checked" ms-class-disabled="status=='disabled'"
+<script type="text/template">
+<div class="form-widget-container">
+    {{each items as el index}}
+    <label value="{{el[$valueField]}}" display="{{el[$textField]}}" style="margin-bottom:0">
+        <div class="icheckbox_square-green{{if el.checked==true}} checked{{/if}}{{if status=='disabled'}} disabled{{/if}}"
              style="position: relative;">
         </div>
-        {{el[$textField]}} &nbsp;&nbsp;&nbsp;
+        {{el[$textField]}}&nbsp;&nbsp;&nbsp;
     </label>
-    <div ms-if="/^\d+$/.test(cols) && (cols!=0) && ($index+1)%cols==0" style="margin-bottom: 10px;"></div>
+    {{if ($cols!=0 && (index+1)%$cols==0)}}
+    <div style="margin-bottom: 10px;"></div>
+    {{/if}}
+    {{/each}}
 </div>
-
-<input ms-if="status=='readonly'" class="form-control form-widget-to-focus-class form-text" ms-duplex="display"  readonly/>
-
-
+</script>
