--- a/src/widget/form/checkbox/checkbox.demo.html
+++ b/src/widget/form/checkbox/checkbox.demo.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title></title>
-    <link href="/page/lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-    <link href="/page/lib/bootstrap/font-awesome/css/font-awesome.css" rel="stylesheet">
-    <link href="/page/lib/bootstrap/css/animate.css" rel="stylesheet">
-    <link href="/page/lib/bootstrap/css/style.css" rel="stylesheet">
-    <link href="/page/src/css/page.css" rel="stylesheet">
-    <link href="/page/lib/bootstrap/css/plugins/iCheck/custom.css" rel="stylesheet">
-    <link href="/page/lib/bootstrap/css/plugins/iCheck/green.png" rel="stylesheet">
-    <link href="/page/lib/bootstrap/css/plugins/iCheck/green@2x.png" rel="stylesheet">
+    <link href="/page2/lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/page2/lib/bootstrap/font-awesome/css/font-awesome.css" rel="stylesheet">
+    <link href="/page2/lib/bootstrap/css/animate.css" rel="stylesheet">
+    <link href="/page2/lib/bootstrap/css/style.css" rel="stylesheet">
+    <link href="/page2/src/css/page.css" rel="stylesheet">
+    <link href="/page2/lib/bootstrap/css/plugins/iCheck/custom.css" rel="stylesheet">
+    <link href="/page2/lib/bootstrap/css/plugins/iCheck/green.png" rel="stylesheet">
+    <link href="/page2/lib/bootstrap/css/plugins/iCheck/green@2x.png" rel="stylesheet">
 </head>
 <body>
 <br>
@@ -22,42 +22,53 @@
 
             <div class="ibox-content">
                 <div class="row">
+                    <button class="btn btn-primary" onclick="changeStatus('edit')">编辑状态</button>
+                    <button class="btn btn-primary" onclick="changeStatus('readonly')">只读状态</button>
+                    <button class="btn btn-primary" onclick="changeStatus('disabled')">禁用状态</button>
+                </div>
+                <div class="row">
                     <div class="col-md-6" id="comboboxContainer">
 
                     </div>
                 </div>
+
             </div>
         </div>
 
     </div>
 </div>
-<script src="/page/bower_components/mootools/Source/Core/Core.js"></script>
-<script src="/page/bower_components/mootools/Source/Types/Array.js"></script>
-<script src="/page/bower_components/mootools/Source/Types/String.js"></script>
-<script src="/page/bower_components/mootools/Source/Types/Object.js"></script>
-<script src="/page/bower_components/mootools/Source/Types/Number.js"></script>
-<script src="/page/bower_components/mootools/Source/Types/Function.js"></script>
-<script src="/page/bower_components/mootools/Source/Class/Class.js"></script>
-<script src="/page/bower_components/mootools/Source/Class/Class.Extras.js"></script>
-<script src="/page/thirdpart/products-WB0R5L90S/Static_Full_Version/js/jquery-2.1.1.js"></script>
-<script src="/page/thirdpart/products-WB0R5L90S/Static_Full_Version/js/bootstrap.js"></script>
+<script src="/page2/bower_components/mootools/Source/Core/Core.js"></script>
+<script src="/page2/bower_components/mootools/Source/Types/Array.js"></script>
+<script src="/page2/bower_components/mootools/Source/Types/String.js"></script>
+<script src="/page2/bower_components/mootools/Source/Types/Object.js"></script>
+<script src="/page2/bower_components/mootools/Source/Types/Number.js"></script>
+<script src="/page2/bower_components/mootools/Source/Types/Function.js"></script>
+<script src="/page2/bower_components/mootools/Source/Class/Class.js"></script>
+<script src="/page2/bower_components/mootools/Source/Class/Class.Extras.js"></script>
+<script src="/page2/thirdpart/products-WB0R5L90S/Static_Full_Version/js/jquery-2.1.1.js"></script>
+<script src="/page2/thirdpart/products-WB0R5L90S/Static_Full_Version/js/bootstrap.js"></script>
+<script src="./template.js"></script>
 
-<script src="/page/bower_components/avalon/avalon.js"></script>
+<script src="/page2/bower_components/avalon/avalon.js"></script>
 <script>
-    require(["../../../page/src/Bootstrap"], function () {
+    require(["../../../page2/src/Bootstrap"], function () {
         var ds = Page.create("dataSet", {
             $id: 'checkboxDS',
             fetchUrl: 'checkbox.data.json'
         });
+for(var i=0; i<1; i++) {
 
-        var checkbox = Page.create('checkbox', {
+
+        checkbox = Page.create('checkbox', {
             $parentId: 'comboboxContainer',
-            $id: 'checkbox',
+            id: "checkbox",
             label: '兴趣',
             value: "1,2",
             display: "足球, 台球",
+            cols: 4,
             valueField: "id",
             textField: "name",
+            status: "readonly",
             required:true,
             showErrorMessage:true,
 //            cols: 3,
@@ -73,18 +84,23 @@
             },
             onValueChange: function(value, oldValue, vm) {
 
-                alert(value)
+                alert("值改变事件： "+value)
             },
             beforeSelectEvent: function(value, display, el) {
-                alert(value+" "+display);
+                alert("选中前事件： "+value+" "+display);
 //                return false;     //这样可以阻止选中事件， 默认不需要
             },
             selectedEvent: function(value, display, el) {
-                alert(value+" "+display);
+                alert("选中事件： "+value+" "+display);
             }
         });
         checkbox.render();
+}
     });
+
+    function changeStatus(status) {
+        checkbox.switchStatus(status);
+    }
 </script>
 <!--<script src="bower_components/avalon/avalon.js" ></script>-->
 <!--<script src="dist/page-build.js" data-main="demo.js"></script>-->
